[tool.poetry]
name = "mass_mutual"
version = "0.1.0"
description = ""
authors = ["Razvan Blaga <razvan.paul.blaga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "*"
pytest = "^6.0.1"
ipython = "^7.17.0"
flatten-dict = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
